[DDW-1017] Fix scrollbar margin

--- a/source/renderer/app/components/widgets/Dialog.scss
+++ b/source/renderer/app/components/widgets/Dialog.scss
@@ -39,12 +39,12 @@
     }
 
     &::-webkit-scrollbar-track {
-      margin-bottom: 12px;
+      margin-bottom: -8px;
       margin-top: 12px;
     }
 
     .content {
-      margin-bottom: 0px;
+      margin-bottom: 1px;
     }
   }
 
